--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {%block content %}
-
+<link rel="stylesheet" href="../static/predict.css">
 <form action="" method="post">
     {{form.hidden_tag()}}
     <div>
