--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,10 @@
         <h3>This is a Flight Prices Prediction model based on Machine Learning</h3>
         <a href="{{url_for('predict') }}">Click Here!</a>
     </div>
-
+<script>
+  window.cbConfig = {
+    chatId: "d825500c-61b3-4132-b1c5-a7d2543f7945"
+  };
+</script>
+<script src="https://app.chatbit.co/embed.min.js" defer></script>
 {%endblock content %}
